--- a/src/components/app.css
+++ b/src/components/app.css
@@ -22,6 +22,19 @@
     }
 }
 
-.card {
-    width: 20 rem;
+body {
+    font-family: 'Space Mono', monospace;
+    background: #4DA0B0;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #D39D38, #4DA0B0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #D39D38, #4DA0B0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+}
+
+.btn {
+    margin: 15px;
+}
+
+.navbar-brand {
+    font-size: 23px;
 }
