footer and initial timestamp

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -37,10 +37,15 @@ h3 {
     margin: 30px;
 }
 
+.add {
+    color: white;
+}
+
 .list-holder {
     margin: 30px;
 }
 
 .navbar-brand {
-    font-size: 23px;
+    font-size: 20px;
+    font-family: 'Space Mono', monospace;
 }
